--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Smooth carousel</title>
 </head>
 <body>
@@ -33,6 +33,6 @@
     <div class="scroll-controll-item" id="scroll-item-4">4</div>
     <div class="scroll-controll-item" id="scroll-item-5">5</div>
   </div>
-  <script src="./main.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 </html>
